<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorSettings">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/hvdhb">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"
        android:fontFamily="sans-serif-black">

    </TextView>

    <EditText
        android:id="@+id/DNameChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:hint="Change Name">

    </EditText>

    <Button
        android:id="@+id/DChangeName"
        style="@style/Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:text="Change Name"
        android:textColor="@color/black">

    </Button>

    <Button
        android:id="@+id/AccountDelete"
        style="@style/Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_centerHorizontal="true"
        android:text="Delete Account"
        android:textColor="@color/red">

    </Button>


</RelativeLayout>