...
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/DoctorSettings"
        style="@style/Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="322dp"
        android:layout_marginTop="180dp"
        android:text="Settings"
...
