<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/hvdhb">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"
        android:fontFamily="sans-serif-black">

    </TextView>

    <TextView
        android:id="@+id/txtviewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="80dp"
        android:textSize="20dp"
        android:textColor="@color/black">

    </TextView>

    <EditText
        android:id="@+id/etxtUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Username"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="190dp">

    </EditText>


    <TextView
        android:id="@+id/txtviewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="85dp"
        android:textSize="20dp"
        android:textColor="@color/black">

    </TextView>

    <EditText
        android:id="@+id/etxtUserPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="290dp"
        android:hint="Enter Password"
        android:inputType="textPassword">

    </EditText>

    <ImageButton
        android:id="@+id/callMedical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:src="@drawable/ic_baseline_call_24">

    </ImageButton>

    <TextView
        android:id="@+id/Emergencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Emergency"
        android:layout_marginTop="520dp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btn_LoginFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dhbteal"
        android:text="Login"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp">

    </Button>

    <Button
        android:id="@+id/RegisterBtn_First"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Borderless"
        android:text="Register"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp">

    </Button>



</RelativeLayout>