...
        android:textSize="30dp"
        android:fontFamily="sans-serif-black">

    </TextView>

    <EditText
        android:id="@+id/NameChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:hint="Change Name">

    </EditText>

    <Button
        android:id="@+id/ChangeName"
        style="@style/Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="Change Name"
...
