...
        android:text="Username Placeholder"
        android:layout_marginTop="190dp">

    </TextView>

   <Button
       android:id="@+id/PatientSettings"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       style="@style/Borderless"
       android:text="Settings"
       android:textColor="@color/dhbteal"
       android:layout_marginTop="180dp"
...
